--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "@angular/common": "5.0.3",
     "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
     "@angular/core": "5.0.3",
     "@angular/forms": "5.0.3",
     "@angular/http": "5.0.3",
@@ -32,6 +31,8 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
+    "@angular/cli": "^1.7.2",
+    "@angular/compiler-cli": "^5.0.3",
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
